--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
   <!-- awal showcase -->
   <section class="bg-primary p-5 p-1g-0 pt-1g-5 text-center text-sm-start text-white">
     <div class="container">
-      <div class="d-sm-flex align-item-center justify-content-between">
+      <div class="d-sm-flex align-item-center justify-content-between"  >
         <div>
-          <h1>Selamat Datang, maribelajar <b>ngoding</b></h1>
+          <h2>Selamat Datang, maribelajar <b>ngoding</b></h2>
           <p>Mari belajar ngoding untuk wujudkan mimpi anda menjadi <b> Programmer Handal </b> dengan materi yang lengkap </p>
-          <button class="btn btn-light"> Yuk belajar </button>
+          <button class="btn btn-light"> Yuk belajar! </button>
         </div>
         <img src="img/showcase.png" alt="" class="img-fluid w-50 d-none d-sm-block">
       </div>
@@ -62,7 +62,7 @@
               <img src="img/logo_html.png" width="100px" alt="...">
               <div class="card-body">
                 <h5 class="card-title mb-3">HTML</h5>
-                <p class="card-text-justify">HTML (Hypertext Markup Language) adalah bahasa markup untuk membuat halaman web menggunakan simbol (tag) yang nantinya akan diterjemahkan oleh browser ke halaman web. Dengan menggunakan tag-tag HTML.</p>
+                <p class="card-text-justify">HTML (Hypertext Markup Language) adalah bahasa markup untuk membuat halaman web menggunakan simbol tertentu (tag) yang nantinya akan diterjemahkan oleh browser ke halaman web. Dengan menggunakan tag-tag HTML</p>
                 <a href="#" class="btn btn-light">Selengkapnya</a>
             </div>
           </div>
@@ -75,7 +75,7 @@
               <img src="img/logo_css.png" width="100px" alt="...">
               <div class="card-body">
                 <h5 class="card-title mb-3">CSS</h5>
-                <p class="card-text-justify">CSS merupakan singkatan dari Cascading Style Sheets,bahasa yang digunakan untuk menentukan tampilan & format halaman website. Dengan CSS, km bisa mengatur jenis font, warna tulisan, dan latar belakang halaman.</p>
+                <p class="card-text-justify">CSS adalah singkatan dari cascading style sheets, yaitu bahasa yang digunakan untuk menentukan tampilan dan format halaman website. Dengan CSS, Anda bisa mengatur jenis font, warna tulisan, dan latar belakang halaman.</p>
                 <a href="#" class="btn btn-light">Selengkapnya</a>
             </div>
           </div>
@@ -88,7 +88,7 @@
               <img src="img/logo_js.png" width="100px" alt="...">
               <div class="card-body">
                 <h5 class="card-title mb-3">JAVASCRIPT</h5>
-                <p class="card-text-justify">JavaScript adalah bahasa pemograman populer yang digunakan untuk membuat situs dengan konten website yang dinamis artinya konten dapat bergerak atau berubah di depan halaman tanpa perlu mereload halaman.</p>
+                <p class="card-text-justify">JavaScript adalah bahasa pemrograman populer yang digunakan untuk membuat situs dengan konten website yang dinamis artinya konten dapat bergerak atau berubah di depan layar tanpa perlu mereload halaman.</p>
                 <a href="#" class="btn btn-light">Selengkapnya</a>
             </div>
           </div>
@@ -114,7 +114,7 @@
               <img src="img/logo_php.png" width="100px" alt="...">
               <div class="card-body">
                 <h5 class="card-title mb-3">PHP</h5>
-                <p class="card-text-justify">PHP (PHP: Hypertext Preprocessor) adalah sebuah bahasa pemrogramman server side scripting yang bersifat open source.PHP menjalankan intruksi pemrograman saat proses runtime. Hasil dari intruksi tentu akan berbeda tergantung data yang diproses.</p>
+                <p class="card-text-justify">PHP  (PHP: Hypertext Preprocessor) adalah sebuah bahasa pemrograman server side scripting yang bersifat open source.PHP menjalankan instruksi pemrograman saat proses runtime. Hasil dari instruksi tentu akan berbeda tergantung data yang diproses.</p>
                 <a href="#" class="btn btn-light">Selengkapnya</a>
             </div>
           </div>
